# artifacts-keyring-nofuss

./: .gitignore  .pre-commit-config.yaml  Dockerfile  FUTURE.md  LICENSE  README.md  action.yml  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: JitAccess.yml
.github/acl/: access.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  release.yml  scorecard.yml  sync-feed.yml
docs/: ci-token.md  codespaces.md  concepts.md  configuration.md  docker.md  github-actions.md  identity.md  index.md  local-dev.md  pip-uv.md  pixi.md  reference.md  tool-integration.md
src/artifacts_keyring_nofuss/: __init__.py  __main__.py  _ado_auth_helper.py  _azure_cli.py  _azure_identity.py  _backend.py  _broker.py  _browser.py  _cli.py  _constants.py  _env_var.py  _github_oidc.py  _http.py  _managed_identity.py  _provider.py  _session_token.py  _workload_identity.py  requirements-lock.txt
tests/: test_backend.py  test_cli.py  test_http.py
